2004-11-22  Tim Waugh  <twaugh@redhat.com>

	* splitdiff.in: Applied patch from Martin Schulze <joey@infodrom.org>
	to use %03d when generating output filenames (Debian bug #282017).

2004-07-15  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.2.30 (stable).

2004-07-15  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (display_filename): Better padding for file
	number.

2004-07-07  Tim Waugh  <twaugh@redhat.com>

	* src/diff.c (read_timezone): New function.
	(read_timestamp): Use it.  Suggested by Shawn Wagner, for parsing
	another common traditional date format.

2004-07-03  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (syntax): Explain --number-files a bit more.

	* src/filterdiff.c (hunk_matches): Don't call file_matches()
	unnecessarily.

2004-07-02  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c: New --number-files option for lsdiff/grepdiff.
	* doc/patchutils.xml (lsdiff): Document it.

2004-05-19  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (hunk_matches): Small correction.

2004-05-14  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml (interdiff.1): Clarify requirement for
	reference files being exactly the same.

2004-05-07  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: For grepdiff -n output format refer to the
	lsdiff man page.

	* src/filterdiff.c (main): Prevent -n being accepted by
	filterdiff.

2004-05-06  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: Include --hunks/--lines/--files in lsdiff man
	page.

	* src/filterdiff.c: Fixed --help output.

	* src/filterdiff.c: Added --files option, based on work by
	Sérgio Monteiro Basto <sergiomb@netcabo.pt>.
	* doc/patchutils.xml: Document it.

	* tests/lsdiff12/run-test: Avoid using /dev/stdin, which is not
	available on Cygwin set-ups.
	* tests/flip*/run-test: Use /bin/echo instead of the shell builtin.
	Patch from Max Bowsher <maxb@ukf.net>.

2004-04-16  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (do_unified): Handle no-newline line counts